# pynjspc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
pynjspc/: __init__.py  client.py  const.py  exceptions.py
pynjspc/examples/: example1.py
scripts/: capture_snapshots.py
tests/: conftest.py
